# clonal-compass

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
clonal_compass/: __init__.py  _warnings.py  annotate.py  chat.py  clonal.py  cluster.py  epitope.py  interpret.py  io.py  markers.py  plots.py  qc.py  report.py
docs/: architecture.md  index.html
docs/reports/: clonal_compass_report.html  clonal_compass_report_cancer.html
scripts/: ask.py  generate_report.py  interpret_clusters.py  load_data.py  run_pipeline.py
